# substreams-example

./: Cargo.toml  README.md  substreams.yaml
proto/: types.proto
src/: lib.rs
src/pb/: cosmos_proto.rs  gogoproto.rs  mod.rs  sf.cosmos.type.v1.rs
