[package]
name = "substreams"
version = "0.1.0"
description = ""
edition = "2021"
repository = "https://github.com/streamingfast/substreams-template"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
prost = { version = "0.11" }
prost-types = "0.11"
substreams = "0.5.6" 

[build-dependencies]
prost-build = "0.11"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
